fix vertical-tabs overflow

--- a/stylesheets/sass_drupal/_vertical-tabs.sass
+++ b/stylesheets/sass_drupal/_vertical-tabs.sass
@@ -9,7 +9,9 @@ $drupal_vertical_tabs_list_selected_background: #fff !default
     border: $drupal_vertical_tabs_border
     position: relative
     /* IE6/7
-
+  .vertical-tabs.clearfix
+    overflow: visible
+    +pie-clearfix
   .vertical-tabs
     ul.vertical-tabs-list
       width: 15em
